[gd_scene load_steps=4 format=3 uid="uid://6pg8sfpakjl1"]

[ext_resource type="Theme" uid="uid://bxhr00agm0ett" path="res://assets/menu_theme.tres" id="1_mw7ct"]
[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="2_bde2u"]
[ext_resource type="PackedScene" uid="uid://cvmrqbvh3wu0j" path="res://scenes/options.tscn" id="3_0y4mm"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mw7ct")
script = ExtResource("2_bde2u")

[node name="RootMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="RootMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RootMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Resume" type="Button" parent="RootMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="RootMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="RootMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="options" parent="." instance=ExtResource("3_0y4mm")]
visible = false
layout_mode = 1

[connection signal="pressed" from="RootMenu/CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="RootMenu/CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="RootMenu/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="back" from="options" to="." method="_on_options_back"]
